[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GamePlayHUD.gd" type="Script" id=1]
[ext_resource path="res://res/RectW.png" type="Texture" id=2]
[ext_resource path="res://Fonts/B_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/B_52.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/B_82.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]

resource_name = "wobble"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -10.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="HUD" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="MainMenu" type="Node2D" parent="." index="0"]

editor/display_folded = true

[node name="Overlay" type="TextureRect" parent="MainMenu" index="0"]

self_modulate = Color( 0.859375, 0.271912, 0.271912, 0.116039 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="MainMenu" index="1"]

modulate = Color( 0.890625, 0.70988, 0.229614, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_top = 25.0
margin_right = 397.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Dodge B"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TapStart" type="Node2D" parent="MainMenu" index="2"]

editor/display_folded = true
position = Vector2( 300, 512 )
rotation = 0.174533
scale = Vector2( 1.2, 1.2 )
_sections_unfolded = [ "Transform" ]

[node name="TapStart" type="Label" parent="MainMenu/TapStart" index="0"]

self_modulate = Color( 0.910156, 0.376862, 0.376862, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -156.0
margin_top = 7.0
margin_right = 184.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Tap to Start"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/TapStart" index="1"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/wobble = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "wobble"

[node name="GamePlay" type="Node2D" parent="." index="1"]

visible = false

[node name="Score" type="Label" parent="GamePlay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 600.0
margin_bottom = 83.0
rect_min_size = Vector2( 600, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.854902, 0.372549, 0.372549, 1 )
custom_colors/font_color_shadow = Color( 0.253906, 0.253906, 0.253906, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors" ]


